fixed the height of the the nav bar on mobile. Also created a render function that changes the nav header from the company name written out to the company logo.

--- a/src/styles/nav/NavHeader.css
+++ b/src/styles/nav/NavHeader.css
@@ -9,7 +9,10 @@
     align-items: center;
     box-shadow: 0px 1px 3px -1px black;
     background-color: #a0262e;
+    padding: 5px 0;
 }
+
+
 
 .nav-link {
     text-decoration: none;
@@ -49,7 +52,9 @@
 }
 
 .nav-title-container {
-    width: 40%
+    width: 40%;
+    display: flex;
+    align-items: center;
 }
 
 .nav-title {
@@ -62,6 +67,11 @@
 .nav-title-link {
     color: #fff;
     text-decoration: none;
+}
+
+.mobile-nav-header-img {
+    width: 50px;
+    border-radius: 50%;
 }
 
 .mobile-nav-link {
